# PolyaFit

./: CMakeLists.txt
exec/: draw.cxx  drawData.cxx  findThr.cxx  fit.cxx  fitSim.cxx  mulTest.cxx
include/: Fitter.h  GraphManager.h  Minimisation.h  MultiplicityFitter.h  PolyaFitter.h
json/: SPS_Oct2015.json  SPS_Sept2018.json
script/: PolyaFitOnGrid.py
src/: Fitter.cpp  GraphManager.cpp  Minimisation.cpp  MultiplicityFitter.cpp  PolyaFitter.cpp  comparArnaud.cxx  draw.cxx  fitSim.cxx
